chore: extract URLs to constants; pass fund ids to scraping methods; add lightweight repo id/code queries