@@ -27,6 +27,9 @@ import static java.util.stream.Collectors.toMap;
 @Service
 public class StockScraperService {
 
+    private static final String STOCK_SEARCH_ALL_URL = "https://pasardana.id/api/StockSearchResult/GetAll?pageBegin=1&pageLength=9000&sortField=Code&sortOrder=ASC";
+    private static final String STOCK_DATA_URL = "https://pasardana.id/api/StockAPI/GetStockData?code=%s&datestart=%s&dateend=%s";
+
     private final ObjectMapper objectMapper;
     private final RestClient restClient;
     private final CustomRepository customRepository;
@@ -48,7 +51,7 @@ public class StockScraperService {
         log.info("Starting to scrape stocks");
         LocalDateTime startTime = LocalDateTime.now();
         try {
-            String getAll = get("https://pasardana.id/api/StockSearchResult/GetAll?pageBegin=1&pageLength=9000&sortField=Code&sortOrder=ASC");
+            String getAll = get(STOCK_SEARCH_ALL_URL);
             List<Stock> stocks = objectMapper.readValue(getAll, new TypeReference<>() {
             });
             log.info("Found {} stocks", stocks.size());
@@ -77,20 +80,19 @@ public class StockScraperService {
         log.info("Starting to scrape stock daily");
 
         try {
-            List<Stock> stocks = customRepository.findAll(Stock.class);
+            List<String> stockCodes = customRepository.findAllStockCodes();
 
             Map<String, LocalDate> maxDatePerCodeMap = customRepository.findAllStockDailyMaxDatePerCode();
 
-            stocks.parallelStream().forEach(stock -> {
+            stockCodes.parallelStream().forEach(code -> {
                 try {
-                    String code = stock.getCode();
                     LocalDate startDate = maxDatePerCodeMap
                             .getOrDefault(code, LocalDate.of(1995, 1, 1))
                             .plusDays(1);
 
                     LocalDate endDate = startTime.toLocalDate().plusDays(1);
                     log.debug("Scraping stock daily for code {} from {} to {}", code, startDate, endDate);
-                    String stockDataRaw = get("https://pasardana.id/api/StockAPI/GetStockData?code=%s&datestart=%s&dateend=%s".formatted(code, startDate, endDate));
+                    String stockDataRaw = get(String.format(STOCK_DATA_URL, code, startDate, endDate));
                     List<StockDaily> stockDailies = objectMapper.readValue(stockDataRaw, new TypeReference<>() {
                     });
 
@@ -108,7 +110,7 @@ public class StockScraperService {
                     log.debug("Inserting {} stock daily data for code {}", uniqueStockDailies.size(), code);
                     customRepository.insertAll(uniqueStockDailies);
                 } catch (Exception e) {
-                    log.warn("Failed to fetch stock daily for code {}", stock.getCode());
+                    log.warn("Failed to fetch stock daily for code {}", code);
                 }
             });
         } catch (Exception e) {
